alhamdulliah spacing problem solved

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ header {
   justify-content: space-between;
 }
 
-.banner-text * {
+.banner-text {
   max-width: 525px;
   margin-bottom: 30px;
 }
@@ -146,18 +146,17 @@ header {
 }
 
 .hotdeal-container {
-  width: 57%;
-  max-width: 1100px;
+  width: 75%;
   margin: 0px auto;
-  padding: 150px 200px;
+  padding: 150px 0px;
   display: flex;
-  gap: 140px;
+  gap: 130px;
   align-items: center;
   justify-content: space-between;
 }
 
-.hotdeal-text *{
-  max-width: 700px;
+.hotdeal-text {
+  max-width: 445px;
   margin: 0px auto;
 }
 
